--- a/www/templates/dataitem.html
+++ b/www/templates/dataitem.html
@@ -1,5 +1,46 @@
-<ion-view view-title="Data Storage: Item">
+<ion-view view-title="Data Item">
     <ion-content>
-        <h1>Item</h1>
+        <div class="list card">
+
+            <div class="item item-avatar">
+                <img ng-src="http://lorempixel.com/g/80/80/people">
+                <h2>{{item.firstName}} {{item.lastName}}</h2>
+                <p>
+                    <a href="mailto:{{item.email}}">{{item.email}}</a>
+                    |
+                    <a href="http://twitter.com/{{item.twitterId}}">{{item.twitterId}}</a>
+
+                </p>
+            </div>
+
+            <div class="item item-body">
+                <img class="full-image" ng-src="http://lorempixel.com/540/304">
+                <p>
+                    This is a "Facebook" styled Card. The header is created from a Thumbnail List item,
+                    the content is from a card-body consisting of an image and paragraph text. The footer
+                    consists of tabs, icons aligned left, within the card-footer.
+                </p>
+                <p>
+                    <a href="#" class="subdued">1 Like</a>
+                    <a href="#" class="subdued">5 Comments</a>
+                </p>
+            </div>
+
+            <div class="item tabs tabs-secondary tabs-icon-left">
+                <a class="tab-item" href="#">
+                    <i class="icon ion-thumbsup"></i>
+                    Like
+                </a>
+                <a class="tab-item" href="#">
+                    <i class="icon ion-chatbox"></i>
+                    Comment
+                </a>
+                <a class="tab-item" href="#">
+                    <i class="icon ion-share"></i>
+                    Share
+                </a>
+            </div>
+
+        </div>
     </ion-content>
 </ion-view>
