--- a/www/templates/dataitem.html
+++ b/www/templates/dataitem.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Data Item">
+<ion-view view-title="Un élément d'une liste">
     <ion-content>
         <div class="list card">
 
