--- a/www/templates/datastorage.html
+++ b/www/templates/datastorage.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Data Storage">
+<ion-view view-title="Une liste">
     <ion-content>
         <ion-list>
             <ion-item class='item-avatar' ng-repeat="item in list" href="#/app/datastorage/{{item.id}}">
