--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -21,14 +21,11 @@
         <ion-item nav-clear menu-close ng-click="login()">
           Login
         </ion-item>
-        <ion-item nav-clear menu-close href="#/app/search">
-          Search
-        </ion-item>
         <ion-item nav-clear menu-close href="#/app/browse">
           Browse
         </ion-item>
         <ion-item nav-clear menu-close href="#/app/datastorage">
-          Data Storage
+          Une liste
         </ion-item>
       </ion-list>
     </ion-content>
