--- a/www/templates/datastorage.html
+++ b/www/templates/datastorage.html
@@ -2,7 +2,7 @@
     <ion-content>
         <ion-list>
             <ion-item class='item-avatar' ng-repeat="item in list" href="#/app/datastorage/{{item.id}}">
-                <img ng-src="http://lorempixel.com/g/80/80/people">
+                <img src="http://lorempixel.com/g/80/80/people">
                 <h2>{{item.firstName}} {{item.lastName}}</h2>
                 <p>
                     <a href="mailto:{{item.email}}">{{item.email}}</a>
